--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ a
 }
 .blok
 {
-    outline: 2px green solid;
-    height: 150px;
+    outline: 2px black;
+    height: 100px;
     width: 60%;
 }
 .lewy
